# mancCoin

./: .gitignore  CMakeLists-External.txt  CMakeLists.txt  Makefile  manccoin
src/: Block.h  Blockchain.cpp  Blockchain.h  Manccoin.cpp  Manccoin.h  ProofOfWork.cpp  ProofOfWork.h  Transaction.h  main.cpp
src/rpc/: rpc.cpp  rpc.h
